--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,3 @@
-<script src="nunjucks.js"></script>
 <!DOCTYPE html>
 <html>
 
@@ -7,6 +6,7 @@
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <title>Test</title>
     <script src="jquery-3.1.1.min.js"></script>
+    <script src="nunjucks.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <!-- Latest compiled and minified CSS -->
@@ -66,9 +66,10 @@
                 </div>
                 <div class="panel-body">
                     {% for item in items %}
-                    <a href="/lecture/{{item._id}}" /> {% else %}
+                    <a href="/lecture/{{item}}" >{{item}}</> {% else %}
                     <li>Нет доступных лекций</li>
                     {% endfor %}
+                    {{user}}
                 </div>
             </div>
     </div>
