--- a/views/index.html
+++ b/views/index.html
@@ -65,11 +65,18 @@
                     <h3 class="panel-title">Доступные лекции</h3>
                 </div>
                 <div class="panel-body">
-                    {% for item in items %}
-                    <a href="/lecture/{{item}}" >{{item}}</> {% else %}
+                  <ul title="Достпуные лекции">
+                    {% for item in items %} {% if item.status %}
+                                  <li >{{item.title}}</li>
+                                  <p>Лекция пройдена</p>
+                       {% else %}
+       <a href="/lecture/{{item._id}}">{{item.title}}</>
+                     {% endif %}
+                     {% else %}
                     <li>Нет доступных лекций</li>
                     {% endfor %}
                     {{user}}
+                  </ul>
                 </div>
             </div>
     </div>
