--- a/views/index.html
+++ b/views/index.html
@@ -65,12 +65,13 @@
                     <h3 class="panel-title">Доступные лекции</h3>
                 </div>
                 <div class="panel-body">
-                  <ul title="Достпуные лекции">
-                    {% for item in items %} {% if item.status %}
-                                  <li >{{item.title}}</li>
-                                  <a href="/test/{{item.test._id}}">Пройти тест</>
+                    <ul title="Достпуные лекции">
+                        {% for item in items %} {% if item.status %}
+                        <li>{{item.title}}</li>
+                        <a href="/test/{{item.test._id}}">Пройти тест</a>
                        {% else %}<br>
        <a href="/lecture/{{item._id}}">{{item.title}}</>
+         <p>Пройти тест</p>
                      {% endif %}
                      {% else %}
                     <li>Нет доступных лекций</li>
