--- a/views/lecture.html
+++ b/views/lecture.html
@@ -1,12 +1,11 @@
-<script src="nunjucks.js"></script>
-<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <title>Test</title>
-    <script src="jquery-3.1.1.min.js"></script>
+    <script src="../jquery-3.1.1.min.js"></script>
+    <script src="../nunjucks.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -32,21 +31,15 @@
         }
     </style>
     <script type="text/javascript">
-        window.onbeforeunload = closingCode;
+        $(document).ready(function() {
 
-
-        function closingCode() {
-            $.ajax({
-                type: "POST",
-                url: "/changeLectureStatus",
-                data: {
-                    {
-                        title._id
-                    }
-                }
+            $("#button").click(function() {
+                console.log("button clicked");
+                $(location).attr('href', '../test/' + $("#id").text())
+                $(window).attr('location', '../test/' + $("#id").text())
+                $(location).prop('href', '../test/' + $("#id").text())
             });
-            return null;
-        }
+        });
     </script>
 </head>
 
@@ -58,11 +51,13 @@
 
             <div class="panel panel-primary" id="container" style="margin:auto;max-width:700px;max-height:700px">
                 <div class="panel-heading">
+                    <h3 id="id">{{lecture._id}}</>
                     <h3 class="panel-title">Лекция {{lecture.title}}</h3>
 
 
                 </div>
                 <p>{{lecture.content}}</p>
+                <button id="button">Начать тест</button>
             </div>
     </div>
     </main>
