--- a/views/ntest.html
+++ b/views/ntest.html
@@ -7,7 +7,6 @@
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <title>Test</title>
     <script src="../jquery-3.1.1.min.js"></script>
-
     <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -37,8 +36,9 @@
         $(document).ready(function() {
             $("#button").click(function() {
                 var data = {
+                    id: $("#id").val(),
                     question: $("#question").val(),
-                    answer: $("#answer").val(),
+                    answer: $("#answer").val()
                 };
 
 
@@ -50,7 +50,7 @@
                 }).
                 done(function(data) {
 
-                    $(".Ouput").html(data.message);
+                    $(".Ouput").html(JSON.stringify(data));
                 }).fail(function(jqXHR, textStatus, errorThrown) {
                     alert("jqXHR:" + jqXHR + "");
                     $(".Ouput").html("jqXHR:" + JSON.stringify(jqXHR) + ",textStatus:" + textStatus + ",errorThrown:" + errorThrown);
@@ -79,12 +79,16 @@
                 </div>
                 <div class="panel-body">
                     <div class="input-group" style="margin:auto;padding:20px">
+                        <h3>Id лекции</h3>
+                        <input id="id" type="text" name="title" class="form-control">
                         <h3>Вопрос</h3>
                         <input id="question" type="text" name="title" class="form-control">
                         <h3>Ответ</h3>
                         <input id="answer" type="text" name="title" class="form-control">
                         <button id="button" type="submit" class="btn btn-default">Добавить</button>
                     </div>
+                    <div class="Ouput"></div>
+
                     <br>
                     <br>
                 </div>
